Remove bg img, add borders, fix spacing
borders have better responsiveness, we can keep the image on the larger screens.

--- a/assets/css/about-us.css
+++ b/assets/css/about-us.css
@@ -17,7 +17,8 @@
 }
 
 .section3 {
-  padding: 101px 159px 42px;
+  /* padding: 101px 159px 42px; */
+  padding: 48px;
 }
 
 .section2 .info-blocks-group {
@@ -101,8 +102,7 @@
 }
 
 .section3__rectangle .heading3 {
-  font-size: 2rem;
-  text-align: center;
+  font-size: 1.8rem;
   margin-bottom: 24px;
   line-height: 32px;
 }
@@ -118,11 +118,11 @@
 
 @media (max-width: 1047px) {
   .section2 {
-    padding: 72px 40px 113px;
+    padding: 40px;
   }
 
   .section3 {
-    padding: 101px 9px 42px;
+    padding: 56px 9px 42px;
   }
 
   .section2 .info-blocks-group {
@@ -141,12 +141,16 @@
   }
 
   .section3__rectangle {
-    background: none;
+    background: var(--white);
     width: 100%;
-    padding: 0;
-    margin-bottom: 0;
+    padding: 2.5rem 2rem;
     height: auto;
-    padding: 30px;
+    border-top: 6px solid var(--blue);
+    border-left: 6px solid var(--blue);
+    border-right: 6px solid var(--orange);
+    border-bottom: 6px solid var(--orange);
+    border-radius: 1.5rem;
+    margin: 0 auto 1rem;
   }
 }
 
@@ -167,19 +171,13 @@
   }
 
   .section3 .heading3 {
-    line-height: 28px;
-    font-weight: 400;
+    line-height: 24px;
+    font-size: 16px;
+    font-weight: 700;
   }
 
   .section3__rectangle {
-    width: 100%;
-    height: 1000px;
-    padding: 40px 30px 30px;
-    margin: 0 auto 5px;
-    background: url("../svg/orange-blue-frame-mobile2.svg");
-    background-position: center;
-    background-size: 100%;
-    background-repeat: no-repeat;
+    padding: 1.5rem;
   }
 
   .section3 .image {
@@ -203,7 +201,7 @@
 .list {
   font-family: "Poppins", sans-serif;
   font-size: 1.6rem;
-  line-height: 3.2rem;
+  line-height: 2.8rem;
 }
 @media (min-width: 768px) {
   .list {
